backend/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http: 
      paths:
      - path: /
        backend:
          serviceName: manager-svc
          servicePort: 3005
      - path: /stats
        backend:
          serviceName: stats-svc
          servicePort: 3001
